--- a/Laboratorio_3_Andres_Flórez_y_Thomas_Ciro/Laboratorio_3_Andres_Flórez_y_Thomas_Ciro.csproj
+++ b/Laboratorio_3_Andres_Flórez_y_Thomas_Ciro/Laboratorio_3_Andres_Flórez_y_Thomas_Ciro.csproj
@@ -53,6 +53,12 @@
     <Compile Include="datosJugador.Designer.cs">
       <DependentUpon>datosJugador.cs</DependentUpon>
     </Compile>
+    <Compile Include="crearJuegoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="crearJuegoForm.Designer.cs">
+      <DependentUpon>crearJuegoForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="formularioPincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +68,9 @@
     <Compile Include="Jugador.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="crearJuegoForm.resx">
+      <DependentUpon>crearJuegoForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="datosJugador.resx">
       <DependentUpon>datosJugador.cs</DependentUpon>
     </EmbeddedResource>
