--- a/Laboratorio_3_Andres_Flórez_y_Thomas_Ciro/Laboratorio_3_Andres_Flórez_y_Thomas_Ciro.csproj
+++ b/Laboratorio_3_Andres_Flórez_y_Thomas_Ciro/Laboratorio_3_Andres_Flórez_y_Thomas_Ciro.csproj
@@ -53,20 +53,30 @@
     <Compile Include="datosJugador.Designer.cs">
       <DependentUpon>datosJugador.cs</DependentUpon>
     </Compile>
-    <Compile Include="formularioPincipal.cs">
+    <Compile Include="crearJuegoForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="formularioPincipal.Designer.cs">
-      <DependentUpon>formularioPincipal.cs</DependentUpon>
+    <Compile Include="crearJuegoForm.Designer.cs">
+      <DependentUpon>crearJuegoForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Jugador.cs" />
+    <Compile Include="OperBasicas.cs" />
+    <Compile Include="principalForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="principalForm.Designer.cs">
+      <DependentUpon>principalForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="datosJugador.resx">
       <DependentUpon>datosJugador.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="formularioPincipal.resx">
-      <DependentUpon>formularioPincipal.cs</DependentUpon>
+    <EmbeddedResource Include="crearJuegoForm.resx">
+      <DependentUpon>crearJuegoForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="principalForm.resx">
+      <DependentUpon>principalForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
